--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -144,7 +144,7 @@ td, th {
     vertical-align: top;
 }
 th {
-    background: #fff url(../images/skin/shadow.jpg);
+    background: url(../images/skin/shadow.jpg);
     color: #666;
     font-size: 11px;
     font-weight: bold;
