--- a/web-app/plugins/navigation-1.0.3/css/navigation.css
+++ b/web-app/plugins/navigation-1.0.3/css/navigation.css
@@ -8,16 +8,16 @@ Just change the color-values to apply your own color-scheme.
 */
 
 /* Main navigation */
-.navigation li a { background-color: #aaa }                         /* Background-color */
-.navigation li.navigation_active a { background-color: #555; }      /* Background-color of active item */
-.navigation li.navigation_active a:hover { background-color: #555;} /* Background-color of hovered active item */
-.navigation li a:hover { background-color: #999; }                  /* Background-color of hovered item */
-.navigation li a { color: #fff; }                                   /* Text color */
-.navigation li a:hover { color: #fff; }                             /* Text color on hovering */
-.navigation li { border: 1px solid #888; }                          /* Border color */
-.navigation li.navigation_first { border-left-color: #888; }        /* Border color. Typically same as above */
-.navigation li { border-left-color: #bbb; }                         /* Highlight border-color */
-.navigation li.navigation_active { border-left-color: #555; }       /* Highlight border-color of active item */
+/*.navigation li a { background-color: #aaa }                         /* Background-color */
+/*.navigation li.navigation_active a { background-color: #555; }      /* Background-color of active item */
+/*.navigation li.navigation_active a:hover { background-color: #555;} /* Background-color of hovered active item */
+/*.navigation li a:hover { background-color: #999; }                  /* Background-color of hovered item */
+/*.navigation li a { color: #fff; }                                   /* Text color */
+/*.navigation li a:hover { color: #fff; }                             /* Text color on hovering */
+/*.navigation li { border: 1px solid #888; }                          /* Border color */
+/*.navigation li.navigation_first { border-left-color: #888; }        /* Border color. Typically same as above */
+/*.navigation li { border-left-color: #bbb; }                         /* Highlight border-color */
+/*.navigation li.navigation_active { border-left-color: #555; }       /* Highlight border-color of active item */
 
 /* Sub navigation */
 .subnavigation li { background-color: #555; }                       /* Background-color */
@@ -29,15 +29,15 @@ Just change the color-values to apply your own color-scheme.
 .subnavigation li.subnavigation_active a { border-color: #e0e0e0; } /* Markings color of active item */
 
 .navigation {
-    list-style-type: none;
-    clear: both;
-    margin: 1em 0;
-    font-size: 12px;
-    overflow: hidden; /* Clearing floats */
+    /*list-style-type: none;*/
+    /*clear: both;*/
+    /*margin: 1em 0;*/
+    /*font-size: 12px;*/
+    /*overflow: hidden; /* Clearing floats */
 }
 
 .navigation li {
-    float: left;
+    /*float: left;*/
     /* border: 1px solid #888; */
     /* border-left-color: #bbb; */
 }
@@ -48,9 +48,9 @@ Just change the color-values to apply your own color-scheme.
     /* border-left-color: #555; */
 }
 .navigation li a {
-    padding: 0.5em 1em;
-    display: block;
-    text-decoration: none;
+    /*padding: 0.5em 1em;*/
+    /*display: block;*/
+    /*text-decoration: none;*/
     /* background-color: #aaa; */
     /* color: #fff; */
 }
@@ -59,8 +59,8 @@ Just change the color-values to apply your own color-scheme.
 }
 .navigation li.navigation_active a {
     /* background-color: #555; */
-    color: #fff;
-    cursor: default;
+    /*color: #fff;*/
+    /*cursor: default;*/
 }
 
 .subnavigation {
