--- a/web-app/css/wendysStore.css
+++ b/web-app/css/wendysStore.css
@@ -66,7 +66,8 @@ thead th {
 
 #headerMessage {
     height: 100px;
-    font-size: 3em;
+    font-size: 2.5em;
+    line-height: 1.25em;
 }
 
 #sidebar {
